--- a/style.css
+++ b/style.css
@@ -16,6 +16,15 @@ header h1, main h2{
     margin-bottom: 70px;
 }
 
+header button{
+    padding: 8px 16px;
+    border-radius: 4px;
+}
+
+.form h2{
+    text-align: right;
+}
+
 header, .form, main{
     margin: 0 auto 70px;
     width: 90%;
@@ -25,19 +34,24 @@ header, .form, main{
 section.form{
     display: grid;
     grid-template-columns: 1fr 1fr;
+    grid-gap: 45px;
 }
 
 form input, form button {
     width: 100%;
+    box-sizing: border-box;
     margin-bottom: 4px;
-    padding: 8px;
+    padding: 8px 16px;
+    border-radius: 4px;
+    border: 1px red solid;
 }
-
-main .donors{
+ main  .donors{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 footer{
     margin-top: auto;
+    padding-bottom: 16px;
+    border: 1px solid #eee;
 }
