--- a/style.css
+++ b/style.css
@@ -2,39 +2,65 @@ html , body {
     margin: 0;
 }
 
-body{
+body {
     display: flex;
     flex-direction: column;
     height: 100vh;
+    font-family: 'Roboto', sans-serif;
+    background-color: #fafafa;
 }
 
 header, main, footer {
     text-align: center;
 }
 
-header h1, main h2{
+main h2 {
     margin-bottom: 70px;
 }
 
-header button{
+h1,h2{
+    color:#000000dd
+}
+
+main h2 span{
+    color: #ff4f4f
+}
+
+.logo {
+    width: 220px;
+    margin: 50px;
+}
+
+header button {
     padding: 8px 16px;
     border-radius: 4px;
+    border: none;
+    background-color: #ff4f4f;
+    color: whitesmoke;
+    font-weight: bold;
 }
 
-.form h2{
-    text-align: right;
-}
-
-header, .form, main{
+header, .form, main {
     margin: 0 auto 70px;
     width: 90%;
     max-width: 500px;
 } 
 
-section.form{
+.form h2 {
+    text-align: right;
+    color: #fafafa;
+    font-size: 24px;
+}
+
+section.form {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 45px;
+    align-items: center;
+
+    background-color: #ff4f4f;
+    padding: 16px 64px;
+    border-radius: 4px;
 }
 
 form input, form button {
@@ -43,14 +69,35 @@ form input, form button {
     margin-bottom: 4px;
     padding: 8px 16px;
     border-radius: 4px;
-    border: 1px red solid;
+    border: 1px #fafafa88 solid;
 }
+
+form input {
+    background-color: transparent;
+}
+
+form input::placeholder {
+    color: #fafafa88;
+}
+
+form button {
+    background-color: white;
+    font-weight: bold;
+    border: 1px #929292 solid;
+}
+
  main  .donors{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
-footer{
+.blood{
+    color: #ff4f4f;
+    font-weight: bold;
+    font-size: 14px;
+}
+
+footer {
     margin-top: auto;
     padding-bottom: 16px;
     border: 1px solid #eee;
