--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ main h2 span{
 }
 
 header button {
+    margin-top: 10px;
     padding: 8px 16px;
     border-radius: 4px;
     border: none;
@@ -83,7 +84,7 @@ form input::placeholder {
 form button {
     background-color: white;
     font-weight: bold;
-    border: 1px #929292 solid;
+    border: 1px #a8a8a8 solid;
 }
 
  main  .donors{
@@ -95,6 +96,31 @@ form button {
     color: #ff4f4f;
     font-weight: bold;
     font-size: 14px;
+
+    display: flex;
+    align-items: center;
+    position: relative;
+    justify-content: center;
+}
+
+.blood::before{
+    content: "";
+    background-color: #ff4f4f16;
+
+    width: 40px;
+    height: 40px;
+
+    position: absolute;
+
+    border-radius: 50%;
+    border-top-right-radius: 0;
+    transform: rotate(-45deg);
+}
+
+.donor p {
+    margin-top:  25px;
+    font-size: 16px;
+    
 }
 
 footer {
