--- a/style.css
+++ b/style.css
@@ -128,3 +128,16 @@ footer {
     padding-bottom: 16px;
     border: 1px solid #eee;
 }
+
+/* Javascript */
+
+section.form.hide {
+    opacity: 0;
+    visibility: hidden;
+    height: 0;
+    margin-top: -70px;
+}
+
+section.form{
+    transition: 300ms;
+}
