--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     flex-direction: column;
     height: 100vh;
     font-family: 'Roboto', sans-serif;
-    background-color: #fafafa;
+    background-color: #f8f8f8;
 }
 
 header, main, footer {
